@@ -1,3 +1,14 @@
+Tue Nov 29 02:23:19 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* symbol.c (NeedToOutputSymbol): Limit KEEP'd symbols to Int and Bool
+	types.
+	(symFlag): Avoid local/global symbols to be marked for STRONG, KEEP,
+	EXPORT or IMPORT.
+	* variables.c (declare_var): Tune erorr when symbol was already
+	marked for IMPORT, EXPORT, STRONG or KEEP.
+	(c_set): Avoid wrong assert when symbol was already marked for
+	IMPORT, EXPORT, STRONG or KEEP. 
+
 Sun Nov 27 22:18:30 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* commands.c (c_lnk): Dump literal pool.
